[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
models = { path = "../models" }
logger = { path = "../logger"}
dotenvy = "0.15.7"
tracing = "0.1.41"
